<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".OnBoard1Activity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/road_rage"
            android:text="@string/welcome_to"
            android:textColor="@color/color_black"
            android:textSize="45sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/road_rage"
            android:text="@string/rodex"
            android:textColor="@color/color_black"
            android:textSize="45sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="308dp"
            android:layout_height="205dp"
            android:src="@drawable/img_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/get_started"
            android:textColor="@color/black" />

    </LinearLayout>