<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddReportActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:background="@color/light_steel_blue"
                android:backgroundTint="@color/light_steel_blue"
                android:contentDescription="@string/preview_image"
                app:layout_constraintBottom_toTopOf="@+id/smLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_insert_photo_24" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/smLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_steel_blue"
                android:text="@string/camera"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/smLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnGallery"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:backgroundTint="@color/light_steel_blue"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/smLocation"
                app:layout_constraintStart_toEndOf="@+id/btnCamera"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edLayoutDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:boxBackgroundColor="@color/orange"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:background="@color/light_steel_blue"
                    android:hint="@string/description"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/upload"
                android:textColor="@color/black"
                android:backgroundTint="@color/light_steel_blue"
                app:layout_constraintTop_toBottomOf="@+id/edLayoutDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />
    </FrameLayout>

</ScrollView>
