<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_inspection"
    android:id="@+id/main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:background="@drawable/stroke_cardview"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        card_view:cardCornerRadius="10dp"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@drawable/stroke_cardview">

            <TextView
                android:id="@+id/tvInspector"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/inspector" />

            <EditText
                android:id="@+id/etInspector"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tvInspector"
                app:layout_constraintStart_toEndOf="@id/tvInspector"
                app:layout_constraintBottom_toBottomOf="@id/tvInspector" />

            <TextView
                android:id="@+id/tvRoadName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/road_name"
                app:layout_constraintTop_toBottomOf="@id/tvInspector"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/etRoadName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tvRoadName"
                app:layout_constraintStart_toEndOf="@id/tvRoadName"
                app:layout_constraintBottom_toBottomOf="@id/tvRoadName" />

            <TextView
                android:id="@+id/tvRoadLength"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/road_length"
                app:layout_constraintTop_toBottomOf="@id/tvRoadName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/etRoadLength"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tvRoadLength"
                app:layout_constraintStart_toEndOf="@id/tvRoadLength"
                app:layout_constraintBottom_toBottomOf="@id/tvRoadLength" />

            <TextView
                android:id="@+id/tvRoadSection"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/road_section"
                app:layout_constraintTop_toBottomOf="@id/tvRoadLength"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/etRoadSection"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tvRoadSection"
                app:layout_constraintStart_toEndOf="@id/tvRoadSection"
                app:layout_constraintBottom_toBottomOf="@id/tvRoadSection" />

            <TextView
                android:id="@+id/tvRoadSurface"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/road_surface"
                app:layout_constraintTop_toBottomOf="@id/tvRoadSection"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/etRoadSurface"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tvRoadSurface"
                app:layout_constraintStart_toEndOf="@id/tvRoadSurface"
                app:layout_constraintBottom_toBottomOf="@id/tvRoadSurface" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="68dp"
                android:backgroundTint="@color/green"
                android:text="@string/start_inspection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRoadSurface" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>
